<resources>
    <string name="app_name">MusicLab</string>
    <string name="frgm1">Оберіть константу</string>
    <string name="rd_pi">Число Пі, π</string>
    <string name="rd_fi">Число φ, золотий перетин</string>
    <string name="rd_e">Число Ейлера</string>
    <string name="length_def">За замовченням: 100</string>
    <string name="decimal">Введіть свою точність (від 2 до 1000):</string>
    <string name="frgm2">Межі (від 0 до 70):</string>
    <string name="from">Значення від </string>
    <string name="to"> до </string>
    <string name="scl_type1">Метод ділення</string>
    <string name="scl_type2">Модульний метод</string>
    <string name="frgm3">Межі (від 0 до 5):</string>
    <string name="info_pitch">Обраний вами діапазон впливає на висоту вашої мелодії (0 - самий низький тон з можливих, 88 - самий високий)
    Увага: якщо, обравши діапазон, ви побачили, що в числовій послідовності занадто багато однакових чисел, то спробуйте обрати іншу заради милозвучності результату.</string>
    <string name="info_dur">Обраний вами діапазон впливає на швидкість кожной ноти вашої мелодії (0 - найкоротша, 5 - найдовша)
    Увага: якщо, обравши діапазон, ви побачили, що в числовій послідовності занадто багато однакових чисел, то спробуйте обрати іншу заради милозвучності результату.</string>
    <string name="pi">31415926535897932384626433832795028841971693993751058209749445923078164062862089986280348253421170679821480865132823066470938446095505822317253594081284811174502841027019385211055596446229489549303819644288109756659334461284756482337867831652712019091456485669234603486104543266482133936072602491412737245870066063155881748815209209628292540917153643678925903600113305305488204665213841469519415116094330572703657595919530921861173819326117931051185480744623799627495673518857527248912279381830119491298336733624406566430860213949463952247371907021798609437027705392171762931767523846748184676694051320005681271452635608277857713427577896091736371787214684409012249534301465495853710507922796892589235420199561121290219608640344181598136297747713099605187072113499999983729780499510597317328160963185950244594553469083026425223082533446850352619311881710100031378387528865875332083814206171776691473035982534904287554687311595628638823537875937519577818577805321712268066130019278766111959092164201989</string>
    <string name="fi">16180339887498948482045868343656381177203091798057628621354486227052604628189024497072072041893911374847540880753868917521266338622235369317931800607667263544333890865959395829056383226613199282902678806752087668925017116962070322210432162695486262963136144381497587012203408058879544547492461856953648644492410443207713449470495658467885098743394422125448770664780915884607499887124007652170575179788341662562494075890697040002812104276217711177780531531714101170466659914669798731761356006708748071013179523689427521948435305678300228785699782977834784587822891109762500302696156170025046433824377648610283831268330372429267526311653392473167111211588186385133162038400522216579128667529465490681131715993432359734949850904094762132229810172610705961164562990981629055520852479035240602017279974717534277759277862561943208275051312181562855122248093947123414517022373580577278616008688382952304592647878017889921990270776903895321968198615143780314997411069260886742962267575605231727775203536139362</string>
    <string name="e">2718281828459045235360287471352662497757247093699959574966967627724076630353547594571382178525166427427466391932003059921817413596629043572900334295260595630738132328627943490763233829880753195251019011573834187930702154089149934884167509244761460668082264800168477411853742345442437107539077744992069551702761838606261331384583000752044933826560297606737113200709328709127443747047230696977209310141692836819025515108657463772111252389784425056953696770785449969967946864454905987931636889230098793127736178215424999229576351482208269895193668033182528869398496465105820939239829488793320362509443117301238197068416140397019837679320683282376464804295311802328782509819455815301756717361332069811250996181881593041690351598888519345807273866738589422879228499892086805825749279610484198444363463244968487560233624827041978623209002160990235304369941849146314093431738143640546253152096183690888707016768396424378140592714563549061303107208510383750510115747704171898610687396965521267154688957035035</string>
    <string name="mistake">Перевірте, чи ввели ви всі дані</string>
    <string name="no_add">Натисніть на кнопку +, щоб додати дані</string>
</resources>
